fix card layout on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -78,12 +78,17 @@ body {
     padding: 1.8rem;
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+    width: 100%;
 
     &__navigation {
-        display: flex;
+        display: block;
         list-style: none;
         justify-content: space-between;
         margin-bottom: 2em;
+
+        @include respond(tablet) {
+            display: flex;
+        }
 
         li {
             button {
@@ -101,7 +106,11 @@ body {
             }
 
             &:nth-child(2) {
-                margin: 0 1rem;
+                margin: .6rem 0;
+
+                @include respond(tablet) {
+                    margin: 0 1rem;
+                }
             }
         }
     }
